{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 100,
  "lineage": "c923baec-315a-a2ee-fc7a-5b4248d85183",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "scheduler_vpc_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612185335394:internet-gateway/igw-0f4de99d767633edb",
            "id": "igw-0f4de99d767633edb",
            "owner_id": "612185335394",
            "tags": {
              "Application": "Scheduler",
              "Deployed_by": "Terraform",
              "Name": "Scheduler VPC IG"
            },
            "vpc_id": "vpc-0f34b4c83dd899ff4"
          },
          "dependencies": [
            "aws_vpc.scheduler_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077ca6b5df4eeada7",
            "id": "nat-093d90114a6d3f801",
            "network_interface_id": "eni-04e22ab82fe2a2b18",
            "private_ip": "10.0.1.175",
            "public_ip": "54.224.219.161",
            "subnet_id": "subnet-060fddc1acc3a696a",
            "tags": {
              "Name": "Nat gateway for scheduler"
            }
          },
          "dependencies": [
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a5816704b3df40d5",
            "owner_id": "612185335394",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f4de99d767633edb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Scheduler public route table"
            },
            "vpc_id": "vpc-0f34b4c83dd899ff4"
          },
          "dependencies": [
            "aws_internet_gateway.scheduler_vpc_gateway",
            "aws_vpc.scheduler_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-014ecc7245fe7354f",
            "owner_id": "612185335394",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-093d90114a6d3f801",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Scheduler private route table"
            },
            "vpc_id": "vpc-0f34b4c83dd899ff4"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.scheduler_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071657919d37c4b10",
            "route_table_id": "rtb-0a5816704b3df40d5",
            "subnet_id": "subnet-060fddc1acc3a696a"
          },
          "dependencies": [
            "aws_route_table.route_table",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_private_one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0196472c47239eb22",
            "route_table_id": "rtb-014ecc7245fe7354f",
            "subnet_id": "subnet-0780718565f848ab8"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.route_table_private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.scheduler_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_private_two",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dafbaf288be3d72d",
            "route_table_id": "rtb-014ecc7245fe7354f",
            "subnet_id": "subnet-025cd5f0b01720f31"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.route_table_private",
            "aws_subnet.private_subnet_two",
            "aws_subnet.public_subnet",
            "aws_vpc.scheduler_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_anything_for_lambda",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612185335394:security-group/sg-038940ad8bc5ae671",
            "description": "Allow https inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038940ad8bc5ae671",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Anything into VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "scheduler allow_https",
            "name_prefix": null,
            "owner_id": "612185335394",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "Scheduler",
              "Deployed_by": "Terraform",
              "Name": "scheduler allow_https",
              "Used_by": "lambda function that talks to db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f34b4c83dd899ff4"
          },
          "dependencies": [
            "aws_vpc.scheduler_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "scheduler_db_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612185335394:security-group/sg-0578fc88ea7d80b44",
            "description": "Allow tcp traffic from SG allow_anything_for_lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0578fc88ea7d80b44",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow DB traffic from lambda",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-038940ad8bc5ae671"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "scheduler db group",
            "name_prefix": null,
            "owner_id": "612185335394",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "Scheduler",
              "Deployed_by": "Terraform",
              "Name": "scheduler_db_group",
              "Used_by": "Scheduler database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f34b4c83dd899ff4"
          },
          "dependencies": [
            "aws_security_group.allow_anything_for_lambda",
            "aws_vpc.scheduler_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612185335394:subnet/subnet-0780718565f848ab8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0780718565f848ab8",
            "map_public_ip_on_launch": false,
            "owner_id": "612185335394",
            "tags": {
              "Application": "Scheduler",
              "Deployed_by": "Terraform",
              "Name": "Private subnet"
            },
            "vpc_id": "vpc-0f34b4c83dd899ff4"
          },
          "dependencies": [
            "aws_vpc.scheduler_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_two",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612185335394:subnet/subnet-025cd5f0b01720f31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-025cd5f0b01720f31",
            "map_public_ip_on_launch": false,
            "owner_id": "612185335394",
            "tags": {
              "Application": "Scheduler",
              "Deployed_by": "Terraform",
              "Name": "Second Private subnet"
            },
            "vpc_id": "vpc-0f34b4c83dd899ff4"
          },
          "dependencies": [
            "aws_vpc.scheduler_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612185335394:subnet/subnet-060fddc1acc3a696a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-060fddc1acc3a696a",
            "map_public_ip_on_launch": true,
            "owner_id": "612185335394",
            "tags": {
              "Application": "Scheduler",
              "Deployed_by": "Terraform",
              "Name": "Public subnet"
            },
            "vpc_id": "vpc-0f34b4c83dd899ff4"
          },
          "dependencies": [
            "aws_vpc.scheduler_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "scheduler_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612185335394:vpc/vpc-0f34b4c83dd899ff4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0addc7db98a3155f3",
            "default_route_table_id": "rtb-0a8798e98d9b32785",
            "default_security_group_id": "sg-0713607fe5486765c",
            "dhcp_options_id": "dopt-de2a27a5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f34b4c83dd899ff4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a8798e98d9b32785",
            "owner_id": "612185335394",
            "tags": {
              "Application": "Scheduler",
              "Deployed_by": "Terraform",
              "Name": "Scheduler VPC"
            }
          }
        }
      ]
    }
  ]
}